maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:19: error: value += is not a member of Int
  sommeAngle += 1
             ^PledgeMaze:22: error: value -= is not a member of Int
    sommeAngle-=1
              ^